# navFHE_rs

./: .gitignore  Cargo.toml  README.md
crates/hpcompalgo/: Cargo.toml
crates/hpcompalgo/benches/: single_segment.rs
crates/hpcompalgo/src/: lib.rs
crates/hpcompcleartext/: Cargo.toml
crates/hpcompcrypto/: Cargo.toml
crates/hpcompcrypto/src/: lib.rs
crates/hpcompcrypto/src/compare/: dgk.rs  joye.rs  mod.rs
crates/hpcompnode/: Cargo.toml
crates/hpcompnode/src/: lib.rs
crates/hpcompproto/: Cargo.toml
crates/hpcompproto/src/: lib.rs
examples/: 2path_a.json  2path_b.json  path_a.json  path_b.json
