
[package]
name = "hpcompcrypto"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Paillier AHE + protocol helpers for homomorphic path comparison"

[features]

# future: dgk, joye
joye = []
dgk = []
default = ["joye"]

[dependencies]
rug = "1.24"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
thiserror = "1.0"
blake3 = "1.5"
clap = { version = "4.5.45", features = ["derive"] }

[dev-dependencies]
proptest = "1.5"

[[bin]]
name = "keygen-paillier"
path = "src/bin/keygen_paillier.rs"


[[bin]]
name = "verify-keys"
path = "src/bin/verify_keys.rs"
