
[package]
name = "hpcompnode"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Alice/Bob nodes over QUIC for homomorphic path comparison"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "macros", "io-util", "time"] }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = { version = "0.14", features = ["crypto"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rug = "1.24"
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

hpcompcrypto = { path = "../hpcompcrypto" }
hpcompproto = { path = "../hpcompproto" }
hpcompalgo = { path = "../hpcompalgo" }

[lib]
name = "hpcompnode"
path = "src/lib.rs"

[[bin]]
name = "alice"
path = "src/bin/alice.rs"

[[bin]]
name = "bob"
path = "src/bin/bob.rs"
